overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  overflow-x: hidden;
+  overflow: hidden;
   /* justify-content: center; */
   /* Horizontal centering */
   /* align-items: center; */
